--- a/app/globals.css
+++ b/app/globals.css
@@ -68,6 +68,14 @@ input[type="number"] {
   -moz-appearance: textfield;
 }
 
+.hide-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+.hide-scrollbar {
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+}
+
 .loader {
   width: 50px;
   aspect-ratio: 1;
