--- a/app/globals.css
+++ b/app/globals.css
@@ -76,6 +76,19 @@ input[type="number"] {
   -ms-overflow-style: none;
 }
 
+#billModal {
+  display: flex;
+  position: fixed;
+  z-index: 500;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.4);
+  align-items: center;
+  justify-content: center;
+}
+
 .loader {
   width: 50px;
   aspect-ratio: 1;
