--- a/app/globals.css
+++ b/app/globals.css
@@ -105,3 +105,22 @@ input[type="number"] {
     transform: rotate(1turn);
   }
 }
+
+ body::-webkit-scrollbar {
+  width: 12px; 
+}
+
+/* body::-webkit-scrollbar-track {
+
+  background: transparent
+} */ 
+
+body::-webkit-scrollbar-thumb {
+  background-color: #E2E8F0; 
+  border-radius: 10px; 
+  border: 3px solid #f1f1f1; 
+} 
+
+/* body::-webkit-scrollbar-thumb:hover {
+  background: #555; /* Color when hovered 
+} */
